@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Blocks toolkit.
 Release 0.2.0 (pending)
 ==========================
 
+- Created infinite source block for benchmarks
 - Added unit test for JSON Topology feature
 
 Release 0.1.0 (2014-12-21)
